src/metrics/snapshots/big_code_analysis__metrics__loc__tests__tcl_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 3,
  "ploc": 2,
  "lloc": 2,
  "cloc": 0,
  "blank": 1,
  "sloc_average": 3.0,
  "ploc_average": 2.0,
  "lloc_average": 2.0,
  "cloc_average": 0.0,
  "blank_average": 1.0,
  "sloc_min": 3,
  "sloc_max": 3,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 2,
  "ploc_max": 2,
  "lloc_min": 2,
  "lloc_max": 2,
  "blank_min": 1,
  "blank_max": 1
}
