src/metrics/snapshots/big_code_analysis__metrics__loc__tests__tcl_global_lloc.snap
---
source: src/metrics/loc.rs
assertion_line: 5470
expression: metric.loc
---
{
  "sloc": 1.0,
  "ploc": 1.0,
  "lloc": 1.0,
  "cloc": 0.0,
  "blank": 0.0,
  "sloc_average": 1.0,
  "ploc_average": 1.0,
  "lloc_average": 1.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 1.0,
  "sloc_max": 1.0,
  "cloc_min": 0.0,
  "cloc_max": 0.0,
  "ploc_min": 1.0,
  "ploc_max": 1.0,
  "lloc_min": 1.0,
  "lloc_max": 1.0,
  "blank_min": 0.0,
  "blank_max": 0.0
}
