src/metrics/snapshots/big_code_analysis__metrics__loc__tests__tcl_if_lloc.snap
---
source: src/metrics/loc.rs
assertion_line: 5415
expression: metric.loc
---
{
  "sloc": 3.0,
  "ploc": 3.0,
  "lloc": 2.0,
  "cloc": 0.0,
  "blank": 0.0,
  "sloc_average": 3.0,
  "ploc_average": 3.0,
  "lloc_average": 2.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 3.0,
  "sloc_max": 3.0,
  "cloc_min": 0.0,
  "cloc_max": 0.0,
  "ploc_min": 3.0,
  "ploc_max": 3.0,
  "lloc_min": 2.0,
  "lloc_max": 2.0,
  "blank_min": 0.0,
  "blank_max": 0.0
}
